--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://scripts.sirv.com/sirv.js"></script>
   </head>
   <body>
     <noscript>
@@ -44,5 +45,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
   </body>
 </html>
