--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"> -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
