--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#ffffff">
-    <script src="https://scripts.sirv.com/sirv.js"></script>
+    <!-- <script src="https://scripts.sirv.com/sirv.js"></script> -->
   </head>
   <body>
     <noscript>
