add google ads tag

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
     gtag('config', 'UA-106102160-2');
   </script>
-
+<script data-ad-client="ca-pub-2757454986564342" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
 <body>
